--- a/blockchain-engine/rust-core/Cargo.toml
+++ b/blockchain-engine/rust-core/Cargo.toml
@@ -13,6 +13,8 @@ sha2 = "0.10"
 ring = "0.17"
 chrono = { version = "0.4", features = ["serde"] }
 uuid = { version = "1.0", features = ["v4", "serde"] }
+argon2 = "0.5"
+rand = "0.8"
 
 [[bin]]
 name = "e-ledger-rust-core"
